--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,7 @@ body {
       right: 3rem; } }
 
 .navigation__background {
+  display: block;
   height: 6rem;
   width: 6rem;
   border-radius: 50%;
@@ -800,7 +801,7 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#819ca9, #29434e);
   z-index: 1000;
-  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  transition: all 500ms cubic-bezier(0.93, 0.1, 0.42, 0.91); }
   @media only screen and (max-width: 56.25em) {
     .navigation__background {
       top: 4.5rem;
@@ -854,7 +855,11 @@ body {
   transform: translateX(1rem); }
 
 .navigation__checkbox:checked ~ .navigation__background {
-  transform: scale(100); }
+  height: 100%;
+  width: 25vw;
+  right: 0;
+  top: 3rem;
+  border-radius: 0%; }
 
 .navigation__checkbox:checked ~ .navigation__nav {
   visibility: visible;
