--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -28,18 +28,20 @@
 	}
 
 	&__background {
+    display: block;
 		height: 6rem;
-		width: 6rem;
+    width: 6rem;
 		border-radius: 50%;
 		position: fixed;
 		top: 6.5rem;
-		right: 6.5rem;
+    right: 6.5rem;
 		background-image: radial-gradient(
 			$color-primary-light,
 			$color-primary-dark
 		);
-		z-index: 1000;
-		transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+    z-index: 1000;
+    transition: all 500ms cubic-bezier(.93,.1,.42,.91);
+		//transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 
 		@include respond(tab-port) {
 			top: 4.5rem;
@@ -60,7 +62,7 @@
 		z-index: 1500;
 		opacity: 0;
 		visibility: hidden;
-		width: 0;
+    width: 0;
 		transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 	}
 
@@ -113,7 +115,12 @@
 
 	//Functionality
 	&__checkbox:checked ~ &__background {
-		transform: scale(100);
+    //transform: scale(100);
+    height: 100%;
+    width: 25vw;
+    right: 0;
+    top: 3rem;
+    border-radius: 0%;
 	}
 
 	&__checkbox:checked ~ &__nav {
