--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ body {
     @media only screen and (max-width: 56.25em) {
       .composition__photo {
         float: left;
+        margin-top: 1rem;
         position: relative;
         width: 33.33333333%;
         box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
@@ -403,7 +404,7 @@ body {
       top: 10rem; }
       @media only screen and (max-width: 56.25em) {
         .composition__photo--p3 {
-          top: 1rem;
+          top: -1rem;
           left: 0;
           transform: scale(1.1); } }
     .composition__photo:hover {
@@ -708,7 +709,7 @@ body {
         margin-bottom: 6rem; } }
   @media only screen and (max-width: 56.25em) {
     .row {
-      max-width: 50rem;
+      max-width: 60rem;
       padding: 0 3rem; } }
   .row::after {
     content: '';
@@ -739,21 +740,26 @@ body {
     width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .header {
-  height: 65vh;
+  height: 55vh;
   background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.8), rgba(41, 67, 78, 0.8)), url(https://placebear.com/2000/1200);
   background-size: cover;
   background-position: top;
   position: relative;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 55vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 55vh, 0 100%); }
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%); }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
       background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.8), rgba(41, 67, 78, 0.8)), url(https://placebear.com/1200/720); } }
   @media only screen and (max-width: 37.5em) {
     .header {
-      height: 60vh;
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%); } }
+      height: 35vh;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%); } }
+  @media only screen and (max-width: 56.25em) {
+    .header {
+      height: 45vh;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 40vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
