--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -11,7 +11,8 @@
 		outline-offset: 2rem;
 
 		@include respond(tab-port) {
-			float: left;
+      float: left;
+      margin-top: 1rem;
 			position: relative;
 			width: 33.33333333%;
 			box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
@@ -43,7 +44,7 @@
 			top: 10rem;
 
 			@include respond(tab-port) {
-				top: 1rem;
+				top: -1rem;
 				left: 0;
 				transform: scale(1.1);
 			}
