--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-	height: 65vh;
+	height: 55vh;
 	background-image: linear-gradient(
 			to right bottom,
 			rgba($color-primary-light, 0.8),
@@ -9,8 +9,8 @@
 	background-size: cover;
 	background-position: top;
 	position: relative;
-	-webkit-clip-path: polygon(0 0, 100% 0, 100% 55vh, 0 100%);
-	clip-path: polygon(0 0, 100% 0, 100% 55vh, 0 100%);
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%);
 
 	@media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
 		only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
@@ -24,9 +24,15 @@
 	}
 
 	@include respond(phone) {
-		height: 60vh;
-		-webkit-clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
-		clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
+		height: 35vh;
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+  }
+  
+  @include respond(tab-port) {
+		height: 45vh;
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 40vh, 0 100%);
 	}
 
 	&__logo-box {
