--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -72,11 +72,11 @@ body {
       padding: 0; } }
 
 ::selection {
-  background-color: #55c57a;
+  background-color: #546e7a;
   color: #fff; }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-weight: 400;
   line-height: 1.7;
   color: #777; }
@@ -111,7 +111,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-image: linear-gradient(to right, #819ca9, #29434e);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -206,10 +206,10 @@ body {
     background-color: #fff; }
 
 .btn--green {
-  background-color: #55c57a;
+  background-color: #546e7a;
   color: #fff; }
   .btn--green::after {
-    background-color: #55c57a; }
+    background-color: #546e7a; }
 
 .btn::after {
   content: '';
@@ -229,15 +229,15 @@ body {
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  color: #55c57a;
+  color: #546e7a;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #55c57a;
+  border-bottom: 1px solid #546e7a;
   padding: 3px;
   transition: all 0.2s; }
 
 .btn-text:hover {
-  background-color: #55c57a;
+  background-color: #546e7a;
   color: #fff;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
@@ -268,11 +268,11 @@ body {
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back-1 {
-        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+        background-image: linear-gradient(to right bottom, #616161, #373737); }
       .card__side--back-2 {
-        background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+        background-image: linear-gradient(to right bottom, #819ca9, #29434e); }
       .card__side--back-3 {
-        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+        background-image: linear-gradient(to right bottom, #8d6e63, #5f4339); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -285,11 +285,11 @@ body {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px; }
     .card__picture--1 {
-      background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
+      background-image: linear-gradient(to right bottom, #616161, #373737), url(../img/nat-5.jpg); }
     .card__picture--2 {
-      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)), url(../img/nat-6.jpg); }
+      background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.85), rgba(41, 67, 78, 0.85)), url(../img/nat-6.jpg); }
     .card__picture--3 {
-      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)), url(../img/nat-7.jpg); }
+      background-image: linear-gradient(to right bottom, rgba(141, 110, 99, 0.85), rgba(95, 67, 57, 0.85)), url(../img/nat-7.jpg); }
   .card__heading {
     font-size: 2.8rem;
     text-transform: uppercase;
@@ -304,11 +304,11 @@ body {
     box-decoration-break: clone;
     -webkit-box-direction: clone; }
     .card__heading-span--1 {
-      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+      background-image: linear-gradient(to right bottom, rgba(97, 97, 97, 0.85), rgba(55, 55, 55, 0.85)); }
     .card__heading-span--2 {
-      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+      background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.85), rgba(41, 67, 78, 0.85)); }
     .card__heading-span--3 {
-      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+      background-image: linear-gradient(to right bottom, rgba(141, 110, 99, 0.85), rgba(95, 67, 57, 0.85)); }
   .card__details {
     padding: 3rem; }
     .card__details ul {
@@ -380,6 +380,7 @@ body {
     @media only screen and (max-width: 56.25em) {
       .composition__photo {
         float: left;
+        margin-top: 1rem;
         position: relative;
         width: 33.33333333%;
         box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
@@ -403,11 +404,11 @@ body {
       top: 10rem; }
       @media only screen and (max-width: 56.25em) {
         .composition__photo--p3 {
-          top: 1rem;
+          top: -1rem;
           left: 0;
           transform: scale(1.1); } }
     .composition__photo:hover {
-      outline: 1.5rem solid #55c57a;
+      outline: 1.5rem solid #546e7a;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
@@ -429,7 +430,7 @@ body {
     font-size: 6rem;
     margin-bottom: 0.5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    background-image: linear-gradient(to right, #819ca9, #29434e);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent; }
@@ -460,9 +461,9 @@ body {
   .form__input:focus {
     outline: none;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-    border-bottom: 3px solid #55c57a; }
+    border-bottom: 3px solid #546e7a; }
   .form__input:focus:invalid {
-    border-bottom: 3px solid #ff7730; }
+    border-bottom: 3px solid #373737; }
   .form__input::-webkit-input-placeholder {
     color: #999; }
 
@@ -499,7 +500,7 @@ body {
 .form__radio-button {
   height: 3rem;
   width: 3rem;
-  border: 5px solid #55c57a;
+  border: 5px solid #546e7a;
   border-radius: 50%;
   display: inline-block;
   position: absolute;
@@ -515,7 +516,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #55c57a;
+    background-color: #546e7a;
     opacity: 0;
     transition: opacity 0.2s; }
 
@@ -585,7 +586,7 @@ body {
     display: inline-block;
     line-height: 1; }
   .popup__close:hover {
-    color: #55c57a; }
+    color: #546e7a; }
 
 .story {
   width: 75%;
@@ -615,14 +616,14 @@ body {
     shape-outside: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     -webkit-clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg);
+    transform: translateX(-4rem) skewX(12deg);
     position: relative; }
     @media only screen and (max-width: 37.5em) {
       .story__shape {
-        transform: translateX(-3rem) skewX(0); } }
+        transform: translateX(-4rem) skewX(0); } }
   .story__img {
     height: 100%;
-    transform: translateX(-4rem) scale(1.4);
+    transform: translateX(-4rem) scale(1.3);
     backface-visibility: hidden;
     transition: all 0.5s; }
   .story__text {
@@ -685,7 +686,7 @@ body {
     display: inline-block;
     transition: all 0.2s; }
   .footer__link:hover, .footer__link:active {
-    color: #55c57a;
+    color: #546e7a;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     transform: rotate(5deg) scale(1.3); }
   .footer__copyright {
@@ -708,7 +709,7 @@ body {
         margin-bottom: 6rem; } }
   @media only screen and (max-width: 56.25em) {
     .row {
-      max-width: 50rem;
+      max-width: 60rem;
       padding: 0 3rem; } }
   .row::after {
     content: '';
@@ -739,21 +740,26 @@ body {
     width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 .header {
-  height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
+  height: 55vh;
+  background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.8), rgba(41, 67, 78, 0.8)), url(https://placebear.com/2000/1200);
   background-size: cover;
   background-position: top;
   position: relative;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 45vh, 0 100%); }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg); } }
+      background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.8), rgba(41, 67, 78, 0.8)), url(https://placebear.com/1200/720); } }
   @media only screen and (max-width: 37.5em) {
     .header {
-      height: 70vh;
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 60vh, 0 100%); } }
+      height: 35vh;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%); } }
+  @media only screen and (max-width: 56.25em) {
+    .header {
+      height: 45vh;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 30vh, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 40vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -798,7 +804,7 @@ body {
   position: fixed;
   top: 6.5rem;
   right: 6.5rem;
-  background-image: radial-gradient(#7ed56f, #28b485);
+  background-image: radial-gradient(#819ca9, #29434e);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   @media only screen and (max-width: 56.25em) {
@@ -850,7 +856,7 @@ body {
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
-  color: #55c57a;
+  color: #546e7a;
   transform: translateX(1rem); }
 
 .navigation__checkbox:checked ~ .navigation__background {
@@ -907,7 +913,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-image: linear-gradient(to right bottom, rgba(129, 156, 169, 0.8), rgba(41, 67, 78, 0.8)), url(../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
   margin-top: -10rem; }
@@ -934,7 +940,7 @@ body {
 
 .section-book {
   padding: 15rem 0;
-  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+  background-image: linear-gradient(to right bottom, #819ca9, #29434e); }
   @media only screen and (max-width: 56.25em) {
     .section-book {
       padding: 10rem 0; } }
